# quality-autopilot

./: .clinerules  .cursorrules  .dockerignore  .gitignore  .instructions.md  .windsurfrules  AGENTS.md  CHECKLIST.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  example.env  index_codebase.py  pyproject.toml  requirements.txt  run_context.json  test_phase_0_5_dod.py  test_rag_accuracy.py  test_spa_crawling.py
.githooks/: post-commit  pre-commit
.github/: README.md  copilot-instructions.md
.github/instructions/: agents.instructions.md  automation.instructions.md
.github/workflows/: app-integration.yml  ci.yml  jira-trigger.yml  test-automation.yml
agents/: __init__.py
agents/architect/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/base/: __init__.py  semantica_agent.py
agents/ci_log_analyzer/: agent.py  instructions.py  tools.py
agents/curator/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/data_agent/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/detective/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/discovery/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/engineer/: __init__.py  __main__.py  agent.py  instructions.py  tools.py
agents/healing_judge/: __init__.py  agent.py  instructions.py  tools.py
agents/judge/: __init__.py  __main__.py  agent.py  tools.py  (+1 more)
app/: __init__.py  config.yaml  context_config.py  main.py  registry.py  semantica_config.py  semantica_context.py  semantica_service.py  settings.py
automation/: .eslintrc.json  README.md  cucumber.conf.ts  package-lock.json  package.json  playwright.config.ts  trigger-tests.js  tsconfig.json
contracts/: __init__.py  automation_scaffold.py  execution_result.py  gherkin_spec.py  grooming_assessment.py  healing_patch.py  judge_verdict.py  rca_report.py  requirement_context.py  run_context.py  site_manifesto.py  test_deletion_approval.py
data/: run_context.json
db/: __init__.py  session.py  url.py
demos/: copilot_demo.py  kilo.py  nvidia.py
evals/: __init__.py  comprehensive_evals.py  engineer_reliability.py  smoke_test.py  test_gate4_e2e.py  test_healing_loop.py
examples/: agentos_client_example.py
pages/: UniversalCreditPersonalDetailsPage.ts  UniversalCreditWizard.ts
scripts/: entrypoint.sh  format.sh  run-smoke.sh  test_fetch.py  validate.sh  venv_setup.sh
teams/: __init__.py
tests/: test_architect_tools.py  test_contracts_gherkin_spec.py  test_contracts_init.py  test_contracts_judge_verdict.py  test_contracts_requirement_context.py  test_jira_webhook_payload.py  test_judge_tools.py
workflows/: __init__.py
(+81 files in other folders)
