[project]
name = "quality-autopilot"
version = "0.1.0"
requires-python = ">=3.12,<4"
readme = "README.md"
authors = [{ name = "Quality Autopilot Team" }]
description = "Agentic Compiler for the Software Testing Life Cycle"

dependencies = [
  "agno[os]",
  "openai",
  "anthropic",
  "mcp",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "PyGithub",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["mypy", "python-dotenv", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "db*", "app*", "teams*", "workflows*", "contracts*", "evals*", "scripts*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "agno.*", "httpx.*", "mcp.*", "openai.*", "yaml.*", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
