[project]
name = "quality-autopilot"
version = "0.1.0"
requires-python = ">=3.12,<4"
readme = "README.md"
authors = [{ name = "Quality Autopilot" }]

dependencies = [
  "agno[os]",
  "anthropic",
  "beautifulsoup4",
  "ddgs",
  "exa-py",
  "google-api-python-client",
  "google-auth-oauthlib",
  "google-genai>=1.52.0",
  "jira",
  "mcp",
  "ollama",
  "openai",
  "pandas",
  "parallel-web",
  "pgvector",
  "pillow",
  "psycopg[binary]",
  "PyGithub",
  "pypdf",
  "requests",
  "slack-sdk",
  "sqlalchemy",
  "wikipedia",
]

[project.optional-dependencies]
dev = ["mypy", "python-dotenv", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "db*", "app*", "teams*", "workflows*", "contracts*", "evals*", "scripts*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = [
  "pgvector.*",
  "agno.*",
  "httpx.*",
  "mcp.*",
  "pandas.*",
  "openai.*",
  "yaml.*",
  "parallel.*",
  "sqlalchemy.*",
  "bs4.*",
  "jira.*",
  "requests.*",
  "PIL.*",
]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
